Secondary Level Link

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -50,6 +50,7 @@ $retailer-title:#7D7D7D;
 $new-order:#b2b2b2;
 $img-box-border:#CBCBCB;
 $credit-btn:#77a8a8;
+$light-brown:#D6AD60;
 $gray-overlay:rgba(0,0,0, 0.4);
 $card-boxshadow: rgba(0,0,0,0.2);
 $main-boxshadow:2px 2px 3px 1px rgba(220, 220, 220, 0.5);
