--- a/src/index.scss
+++ b/src/index.scss
@@ -1271,7 +1271,22 @@ body .main-header .navbar{
 .data-center{
   margin-left: 43%;
 }
-
+.level-btn{
+  color:$light-brown;
+  text-decoration: underline;
+  margin: 0 0 15px;
+  min-width: 137px;
+  width: auto;
+}
+a.level-btn:hover {
+  color: $light-brown;
+}
+.level-plus{
+  text-decoration: underline;
+  padding: 1px;
+  font-weight: unset;
+  font-size: 10px;
+}
 /****************************User Management-Advanced search************************/
 #menu #list {
   max-height: 0;
@@ -1395,6 +1410,8 @@ body .main-header .navbar{
   background-image: $gradient-1;
   border-radius: 25px;
   color: $white;
+  padding: 2px 10px;
+  width: 100px;
 }
 .active-inactive{
   border: 2px solid $orange;
@@ -1408,12 +1425,7 @@ body .main-header .navbar{
 .sub-dashboard{
   padding-top:10px;
 }
-.crop-table{
-  overflow-x: scroll;
-  width: 100%;
-  overflow-y: hidden;
-  max-width: 1162px;
-}
+
 .table th, table td{
   border-top: none;
   color: $primary-color;
@@ -2606,7 +2618,7 @@ display: flex;
     overflow-x: scroll;
     width: 100%;
     overflow-y: hidden;
-    max-width: 1162px;
+   // max-width: 1162px;
   }
   .li-menu-link {
     /* background: rgba(237, 240, 245, 0.5); */
