--- a/src/index.scss
+++ b/src/index.scss
@@ -2324,7 +2324,10 @@ padding: 5px;
   min-width: 137px;
   font-size: 15px;
   font-weight: 600;
-
+ }
+ .zoom-img{
+   width: 50px;
+   height: 50px;
  }
 /****************************Coupon Section************************/
 .line-wrapper{
