--- a/src/variables.scss
+++ b/src/variables.scss
@@ -42,6 +42,7 @@ $step-bg: rgba(0,0,0,.12);
 $step-color:#6c757d;
 $select-border:#BA7EF7;
 $pale-violet-red:#DB7093;
+$trans-purple:#f4b0c7;
 $deep-sea-blue:#82CAFF;
 $table-border:#dee2e6;
 $graph-color:#697a99;
