--- a/src/index.scss
+++ b/src/index.scss
@@ -1988,6 +1988,7 @@ a.order-btn:hover {
   display: flex;
   align-items: center;
   margin-bottom: 12px;
+  margin-top: 15px;
 }
 .bs-stepper-label {
   display: inline-block;
