--- a/src/variables.scss
+++ b/src/variables.scss
@@ -44,6 +44,7 @@ $select-border:#BA7EF7;
 $pale-violet-red:#DB7093;
 $trans-purple:#f4b0c7;
 $deep-sea-blue:#82CAFF;
+$sea-blue:#18c8c9;
 $table-border:#dee2e6;
 $graph-color:#697a99;
 $farm-title:#868686;
