--- a/src/variables.scss
+++ b/src/variables.scss
@@ -45,6 +45,7 @@ $pale-violet-red:#DB7093;
 $trans-purple:#f4b0c7;
 $deep-sea-blue:#82CAFF;
 $sea-blue:#18c8c9;
+$turquoise:#40E0D0;
 $table-border:#dee2e6;
 $graph-color:#697a99;
 $farm-title:#868686;
