--- a/src/variables.scss
+++ b/src/variables.scss
@@ -57,6 +57,8 @@ $new-order:#b2b2b2;
 $img-box-border:#CBCBCB;
 $credit-btn:#77a8a8;
 $light-brown:#D6AD60;
+$cyan: #60daaa;
+$yellow: #fbca67;
 $gray-overlay:rgba(0,0,0, 0.4);
 $card-boxshadow: rgba(0,0,0,0.2);
 $main-boxshadow:2px 2px 3px 1px rgba(220, 220, 220, 0.5);
