--- a/src/variables.scss
+++ b/src/variables.scss
@@ -59,6 +59,7 @@ $credit-btn:#77a8a8;
 $light-brown:#D6AD60;
 $cyan: #60daaa;
 $yellow: #fbca67;
+$report-box:#d9d9d9;
 $gray-overlay:rgba(0,0,0, 0.4);
 $card-boxshadow: rgba(0,0,0,0.2);
 $main-boxshadow:2px 2px 3px 1px rgba(220, 220, 220, 0.5);
