--- a/src/index.scss
+++ b/src/index.scss
@@ -3234,6 +3234,9 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
   top: 242px;
   right: 83px;
 }
+.order-report .reset-box{
+  top: 317px;
+}
 .sale-box .reset-box{
   top: 318px;
   right: 70px;
@@ -3249,7 +3252,12 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     .data-search{
   margin-right: 20px;
 }
-
+.main-container .order-report .start-date {
+  margin-left: 9px;
+}
+.sidebar-container .order-report .start-date {
+  margin-left: 31px;
+}
 .do-TreeSelect{
   height: 130px!important;
   overflow: hidden;
