--- a/src/index.scss
+++ b/src/index.scss
@@ -3264,7 +3264,7 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 }
 
 .im-se {
-  background-image: url(../src/assets/images/placeholder.png) no-repeat 5px center;
+  // background-image: url(../src/assets/images/placeholder.png) no-repeat 5px center;
   background-position: 10px center;
   background-repeat: no-repeat;
   border: 1px solid #ccc;
