--- a/src/index.scss
+++ b/src/index.scss
@@ -937,7 +937,9 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
 }
 .maincentext {
   border-radius: 50%;
-  // width: 117px;
+  // width: 117px;k
+
+
   // height: 123px;
   width: 100px;
   height: 100px;
@@ -949,8 +951,8 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
 
   .check-mark{
     position: absolute;
-    top: -21px;
-    right: -16px;
+    top: -22px;
+    right: -22px;
   } 
 }
 .farm-title{
@@ -1343,39 +1345,63 @@ a.level-btn:hover {
   right: -40px;
   font-size: 18px;
   color:$gray;
+  border: none;
+  background: none;
 }
-
-.shop-mark{
-  h4{
-    position: absolute;
-  }
+.mark-color{
+  color: $red;
+}
+/* .shop-mark{
   .check-mark{
-    right: -95px;
-    top: -12px;
+    right: -89px;
+    top: 18px;
     }
 }
 .shop-address{
-  h4{
-    position: absolute;
-  }
   .check-mark{
-    right: -113px;
-    top: -11px;
+    right: -108px;
+    top: 18px;
   }
 }
 .shop-type{
-  h4{
-    position: absolute;
-  }
   .check-mark{
-    right: -89px;
-    top:-10px;
+    right: -83px;
+    top:18px;
   }
 }
-.check-mark:hover,
-.check-mark:focus{
-  color:red
+.shop-local{
+top: 27px
+} */
+
+.shop-name{
+  position: relative;
+
+  .check-mark{
+    position: absolute;
+    top: -10px;
+    left: 95px;
+  }
 }
+
+.farmer-address{
+  position: relative;
+
+  .check-mark{
+    position: absolute;
+    top: -10px;
+  }
+  &.shop-address .check-mark{
+    left: 130px;
+  }
+
+  &.shop-type .check-mark{
+    left: 100px;
+  }
+  &.shop-time .check-mark{
+    left: 100px;
+  }
+}
+
 /****************************User Management-Advanced search************************/
 #menu #list {
   max-height: 0;
@@ -3261,36 +3287,6 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 .do-TreeSelect{
   height: 130px!important;
   overflow: hidden;
-}
-
-.im-se {
-  // background-image: url(../src/assets/images/placeholder.png) no-repeat 5px center;
-  background-position: 10px center;
-  background-repeat: no-repeat;
-  border: 1px solid #ccc;
-  
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-  
-  padding: 10px 5px;
-  text-indent: 20px;
-  
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 2s;
-  transition: all 0.2s;
-  
-  width: 90px;
-  z-index: 1;
-}
-
-.im-se:focus {
-  /* Picked a random icon from Google */
-  background-position: -20px center;
-  text-indent: 0;
-  z-index: 0;
 }
 
 // input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
