--- a/src/index.scss
+++ b/src/index.scss
@@ -3013,7 +3013,7 @@ display: flex;
 // }
 .sidebar-container{
   .set-btn{
-    width: 30%;
+    width: 32%;
   }
 }
  .set-btn {
@@ -3284,7 +3284,98 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
   height: 130px!important;
   overflow: hidden;
 }
+.do-SearchBox-input{
+  height: 38px;
+}
+// .form-label-group{
+//   position: relative;
+// }
+// .form-label-group > label {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   display: block;
+//   width: 100%;
+//   margin-bottom: 0;
+//   line-height: 1.5;
+//   color: #495057;
+//   border: 1px solid transparent;
+//   border-radius: .25rem;
+//   transition: all .1s ease-in-out;
+// }
+// .do-SearchBox > label{
+//   transition: all .1s ease-in-out;
+// }
+// .form-label-group > div > div > input.do-SearchBox-input, .form-label-group > label {
+//   padding: var(--input-padding-y) var(--input-padding-x);
+// }
+// .form-label-group input.do-SearchBox-input:not(:placeholder-shown) {
+//   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+//   padding-bottom: calc(var(--input-padding-y) / 3);
+// }
 
+
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-label-group > div > div > input.do-SearchBox-input,
+.form-label-group > label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+}
+
+.form-label-group > label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0; /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
+}
+
+.form-label-group input.do-SearchBox-input::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input.do-SearchBox-input:-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input.do-SearchBox-input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input.do-SearchBox-input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input.do-SearchBox-input::placeholder {
+  color: transparent;
+}
+
+.form-label-group > div > div > input.do-SearchBox-input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-label-group > div > div > input.do-SearchBox-input:not(:placeholder-shown) ~ label:active {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+.form-label-group > div > div > input:not(:placeholder-shown) ~ label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
 // input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 //   color:    #909;
 //   content: "content6";
